Adjusted names of files, fixed arrow overlap
Changed names of the Section file to Invite and created a new file called Commands for command section. Adjusted the CSS of the arrow to fix the overlap

--- a/bot-site/src/resources/App.css
+++ b/bot-site/src/resources/App.css
@@ -26,9 +26,10 @@
 .App-link {
   color: #61dafb;
 }
+
 .Section1 {
   background-color: #333;
-  min-height: 90vh;
+  min-height: 100vh - 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -39,6 +40,29 @@
 
 .Section1-Footer {
   background-color: #333;
+  height:80px;
+  display: flex;
+  position: relative;
+  bottom: 0;
+  align-items: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  transform: translate(0, -2px);
+}
+
+.Section2 {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.Section2-Footer {
+  background-color: #282c34;
   height:80px;
   display: flex;
   position: absolute;
@@ -55,7 +79,7 @@
   height:40px;
   border:5px solid #222;
   border-width:5px 5px 0 0;
-  transform:translateX(-14px) rotate(90deg);
+  transform:translate(-14px, 5px) rotate(90deg);
  }
 
  .border-arrow.curvy{
@@ -98,23 +122,19 @@
  }
 
 .section {
-}
-
-.section-dark {
-  background: #333;
-  color: white;
-  width: 100%;
+  background-color: #333;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  color: white;
 }
 
 .section-content {
   max-width: 800px;
   margin: 0 auto;
-  padding: 40px;
+  padding: 35px;
 }
 
